# AdminService

./: README.md
AdminModule/code/: CMakeLists.txt
AdminModule/code/CMakeModules/: Find3dsMaxSDK.cmake  FindCustomMFC.cmake  FindDSound.cmake  FindDirectXSDK.cmake  FindExternal.cmake  FindFMOD.cmake  FindNeL.cmake  FindOpenGLES.cmake  FindSTLport.cmake  OSXToolChain.cmake  nel.cmake
AdminModule/code/nel/: CMakeLists.txt
AdminModule/code/nel/include/nel/: CMakeLists.txt
AdminModule/code/nel/include/nel/misc/: stdin_monitor_thread.h  timer.h  utils.h
AdminModule/code/nel/include/nel/net/: admin_callback.h  admin_module.h  buf_sock.h
AdminModule/code/nel/src/: CMakeLists.txt
AdminModule/code/nel/src/misc/: CMakeLists.txt  debug.cpp  log.cpp  stdin_monitor_thread.cpp  stdmisc.h  timer.cpp  utils.cpp
AdminModule/code/nel/src/net/: CMakeLists.txt  admin _callback.cpp  admin _module.cpp  buf_sock.cpp  net_log.cpp
AdminModule/code/test/: CMakeLists.txt
AdminModule/code/test/app/: CMakeLists.txt  main.cpp  start_connect_local_svr.bat  start_connect_test_svr.bat  stop.bat
AdminService/code/: CMakeLists.txt
AdminService/code/CMakeModules/: FindLibEvent.cmake  FindOpenSSL.cmake  FindProtoBuf.cmake  nel.cmake
AdminService/code/EVA/server/: CMakeLists.txt  _shard_start.bat  _shard_stop.bat  admin_service.cfg  common.cfg  msg.xml  shard.screen.rc
AdminService/code/EVA/server/admin_service/: CMakeLists.txt  admin_module.cpp  admin_module.h  admin_module_mgr.cpp  admin_module_mgr.h  admin_service.cpp  admin_service.h  callback_wsserver.cpp  callback_wsserver.h  client.cpp  client.h  client_mgr.cpp  client_mgr.h  msg_as.cpp  msg_as.h
AdminService/code/EVA/server/script/DataTable/proto/: define_pro.proto  msg_client.proto
AdminService/code/EVA/server/server_share/: CMakeLists.txt  buf_fifo2.h  client_msg_desc.cpp  game_def.h  ranking_change_near.h  ranking_slot.h  server_def.h  tools.h  url_task.cpp  url_task.h  url_threads.cpp  url_threads.h
AdminService/code/EVA/server/server_share/db_mysql/: db_mysql.cpp  db_mysql.h  mysql_connect.cpp  mysql_connect.h  mysql_def.h  mysql_execute.cpp  mysql_execute.h  mysql_result.cpp  mysql_result.h  mysql_statement.cpp  mysql_statement.h  mysql_template.inl
AdminService/code/EVA/server/server_share/db_record/: db_record_base.h
AdminService/code/EVA/server/server_share/json/: json-util.h  json_reader.cpp  json_value.cpp  json_writer.cpp  value.h  writer.h
AdminService/code/EVA/server/server_share/pb/: define_pro.pb.cc  define_pro.pb.h  msg_client.pb.cc  msg_client.pb.h
AdminService/code/nel/include/nel/misc/: common.h  smart_ptr.h
AdminService/code/nel/src/misc/: common.cpp
AdminService/code/nel/src/net/: buf_server_tcp.cpp  buf_server_websocket.cpp  buf_server_websocket_func.cpp  buf_sock.cpp  unified_network.cpp
AdminService/tools/protobuf/: msg_client.proto  protobuf_gen_cpp.bat
AdminService/tools/server/sql/: d_admin_procedure.sql  d_admin_table.sql
AdminService/tools/xlsx2json/: config.json  package-lock.json  package.json
AdminService/tools/xlsx2json/excel/: test.xlsx
AdminWeb/: package.json
AdminWeb/src/: main.js
AdminWeb/src/components/common/: Header.vue  Sidebar.vue
AdminWeb/src/components/page/: BaseTable.vue  Dashboard.vue  Login.vue
AdminWeb/src/router/: index.js
AdminWeb/src/store/: index.js
